# yolonnx

./: .gitignore  LICENSE  README.md  pyproject.toml
src/yolonnx/: model.py  protocols.py  to_tensor_strategies.py  utils.py
src/yolonnx/services/: __init__.py  classifier.py  detector.py
tests/: __init__.py
