[project]
name = "yolonnx"
version = "0.1.2"
description = "You Only Look ONNX"
authors = [
    {name = "Kasper Fromm Pedersen", email = "kasperf@cs.aau.dk"},
]
dependencies = [
    "numpy==1.26.*",
    "aau-label==0.2.*"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["ONNX", "YOLOv8", "onnxruntime", "vision"]

[project.urls]
homepage = "https://www.cs.aau.dk/"
repository = "https://github.com/fromm1990/yolonnx"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.dev-dependencies]
test = [
    "onnxruntime==1.17.*"
]

[tool.pdm]
distribution = true
